--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body>
   <script>
     WCT.loadSuites([
-      'modal-icon-test.html'
+      'modal-icon-test.html',
+      'modal-icon-test.html?dom=shadow'
     ]);
   </script>
 </body>
