Replaced hovering property with show-icon property.  Added ripple property.  Bumped version to 1.0.2

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,60 +19,70 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <body unresolved>
   <template is="dom-bind" id="demo">
+    <p>===== DEMO 1 =====</p>
     <p>Icon: icons:polymer</p>
     <p>Icon Style Class: custom</p>
+    <p>Show Icon: false</p>
     <p>Openable: false</p>
     <p>Open: false</p>
-    <p>Hovering: false</p>
 
+    <p>Modal Icon:</p>
     <modal-icon
       icon="icons:polymer"
       icon-style-class="custom">
     </modal-icon>
 
+    <p>===== DEMO 2 =====</p>
     <p>Icon: icons:polymer</p>
     <p>Icon Style Class: custom</p>
+    <p>Show Icon: true</p>
     <p>Openable: false</p>
     <p>Open: false</p>
-    <p>Hovering: true</p>
 
+    <p>Modal Icon:</p>
     <modal-icon
       icon="icons:polymer"
       icon-style-class="custom"
-      hovering>
+      show-icon>
     </modal-icon>
 
+    <p>===== DEMO 3 =====</p>
     <p>Icon: icons:polymer</p>
     <p>Icon Style Class: custom</p>
+    <p>Show Icon: false</p>
     <p>Openable: true</p>
     <p>Open: false</p>
-    <p>Hovering: false</p>
 
+    <p>Modal Icon:</p>
     <modal-icon
       icon="icons:polymer"
       icon-style-class="custom"
       openable>
     </modal-icon>
 
+    <p>===== DEMO 4 =====</p>
     <p>Icon: icons:polymer</p>
     <p>Icon Style Class: custom</p>
+    <p>Show Icon: true</p>
     <p>Openable: true</p>
     <p>Open: false</p>
-    <p>Hovering: true</p>
 
+    <p>Modal Icon:</p>
     <modal-icon
       icon="icons:polymer"
       icon-style-class="custom"
-      openable
-      hovering>
+      show-icon
+      openable>
     </modal-icon>
 
+    <p>===== DEMO 5 =====</p>
     <p>Icon: icons:polymer</p>
     <p>Icon Style Class: custom</p>
+    <p>Show Icon: false</p>
     <p>Openable: true</p>
     <p>Open: true</p>
-    <p>Hovering: false</p>
 
+    <p>Modal Icon:</p>
     <modal-icon
       icon="icons:polymer"
       icon-style-class="custom"
@@ -80,18 +90,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       open>
     </modal-icon>
 
+    <p>===== DEMO 6 =====</p>
     <p>Icon: icons:polymer</p>
     <p>Icon Style Class: custom</p>
+    <p>Show Icon: true</p>
     <p>Openable: true</p>
     <p>Open: true</p>
-    <p>Hovering: true</p>
 
+    <p>Modal Icon:</p>
     <modal-icon
       icon="icons:polymer"
       icon-style-class="custom"
+      show-icon
       openable
-      open
-      hovering>
+      open>
     </modal-icon>
   </template>
 </body>
