--- a/test/modal-icon-test.html
+++ b/test/modal-icon-test.html
@@ -29,18 +29,13 @@
 
       test('properties are set to default values', function() {
         expect(component.iconStyleClass).to.equal('');
+        expect(component.showIcon).to.be.false;
         expect(component.openable).to.be.false;
         expect(component.open).to.be.false;
-        expect(component.hovering).to.be.false;
+        expect(component.ripple).to.be.false;
       });
 
-      test('does show custom paper-icon-button', function() {
-        expect(component.$$('paper-icon-button.show')).to.exist;
-        expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
-      });
-
-      test('does show custom paper-icon-button if openable but not hovering or open', function(done) {
-        component.openable = true;
+      test('does show custom paper-icon-button if not showIcon and not openable and not open', function(done) {
         flush(function() {
           expect(component.$$('paper-icon-button.show')).to.exist;
           expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
@@ -48,7 +43,7 @@
         });
       });
 
-      test('does show custom paper-icon-button if open but not hovering or openable', function(done) {
+      test('does show custom paper-icon-button if open but not showIcon and not openable', function(done) {
         component.open = true;
         flush(function() {
           expect(component.$$('paper-icon-button.show')).to.exist;
@@ -57,7 +52,37 @@
         });
       });
 
-      test('does show custom paper-icon-button if open and openable but not hovering', function(done) {
+      test('does show custom paper-icon-button if showIcon but not openable or open', function(done) {
+        component.showIcon = true;
+        flush(function() {
+          expect(component.$$('paper-icon-button.show')).to.exist;
+          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
+          done();
+        });
+      });
+
+      test('does show custom paper-icon-button if showIcon and openable but not open', function(done) {
+        component.showIcon = true;
+        component.openable = true;
+        flush(function() {
+          expect(component.$$('paper-icon-button.show')).to.exist;
+          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
+          done();
+        });
+      });
+
+      test('does show custom paper-icon-button if showIcon and open but not openable', function(done) {
+        component.showIcon = true;
+        component.open = true;
+        flush(function() {
+          expect(component.$$('paper-icon-button.show')).to.exist;
+          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
+          done();
+        });
+      });
+
+      test('does show cusom paper-icon-button if showIcon and openable and open', function(done) {
+        component.showIcon = true;
         component.openable = true;
         component.open = true;
         flush(function() {
@@ -67,27 +92,8 @@
         });
       });
 
-      test('does show custom paper-icon-button if hovering but not open or openable', function(done) {
-        component.hovering = true;
-        flush(function() {
-          expect(component.$$('paper-icon-button.show')).to.exist;
-          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
-          done();
-        });
-      });
-
-      test('does show custom paper-icon-button if hovering and open but not openable', function(done) {
-        component.hovering = true;
-        flush(function() {
-          expect(component.$$('paper-icon-button.show')).to.exist;
-          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
-          done();
-        });
-      });
-
-      test('does show expand-more paper-icon-button if hovering and openable but not open', function(done) {
+      test('does show expand-more paper-icon-button if openable but not open or showIcon', function(done) {
         component.openable = true;
-        component.hovering = true;
         flush(function() {
           expect(component.$$('paper-icon-button.show')).to.exist;
           expect(component.$$('paper-icon-button.show').icon).to.equal('icons:expand-more');
@@ -95,13 +101,23 @@
         });
       });
 
-      test('does show expand-more paper-icon-button if hovering and open and openable', function(done) {
+      test('does show expand-less paper-icon-button if openable and open but not showIcon', function(done) {
         component.openable = true;
         component.open = true;
-        component.hovering = true;
         flush(function() {
           expect(component.$$('paper-icon-button.show')).to.exist;
           expect(component.$$('paper-icon-button.show').icon).to.equal('icons:expand-less');
+          done();
+        });
+      });
+
+      test('ripple does set noink', function(done) {
+        expect(component.$$('paper-icon-button')).to.exist;
+        expect(component.$$('paper-icon-button').noink).to.be.false;
+        component.ripple = true;
+        flush(function() {
+          expect(component.$$('paper-icon-button')).to.exist;
+          expect(component.$$('paper-icon-button').noink).to.be.true;
           done();
         });
       });
