Fixed ripple.  Bumped version to 1.0.3

--- a/modal-icon.html
+++ b/modal-icon.html
@@ -35,9 +35,9 @@ Example:
       }
     </style>
 
-    <paper-icon-button class$="[[_showOrHideCustomIcon(showIcon, openable)]] [[iconStyleClass]]" icon$="[[icon]]" noink="[[ripple]]"></paper-icon-button>
-    <paper-icon-button class$="[[_showOrHideOpenedIcon(showIcon, openable, open)]]" icon="icons:expand-less" noink="[[ripple]]"></paper-icon-button>
-    <paper-icon-button class$="[[_showOrHideClosedIcon(showIcon, openable, open)]]" icon="icons:expand-more" noink="[[ripple]]"></paper-icon-button>
+    <paper-icon-button class$="[[_showOrHideCustomIcon(showIcon, openable)]] [[iconStyleClass]]" icon$="[[icon]]" noink="[[!ripple]]"></paper-icon-button>
+    <paper-icon-button class$="[[_showOrHideOpenedIcon(showIcon, openable, open)]]" icon="icons:expand-less" noink="[[!ripple]]"></paper-icon-button>
+    <paper-icon-button class$="[[_showOrHideClosedIcon(showIcon, openable, open)]]" icon="icons:expand-more" noink="[[!ripple]]"></paper-icon-button>
   </template>
 
   <script>
