--- a/test/modal-icon-test.html
+++ b/test/modal-icon-test.html
@@ -16,108 +16,108 @@
 
   <script>
     suite('modal-icon tests', function() {
-      var component;
+      var element;
 
       setup(function() {
-        component = fixture('modal-icon-fixture');
-        component.icon = 'icons:polymer';
+        element = fixture('modal-icon-fixture');
+        element.icon = 'icons:polymer';
       });
 
       test('icon is set to correct value', function() {
-        expect(component.icon).to.equal('icons:polymer');
+        expect(element.icon).to.equal('icons:polymer');
       });
 
       test('properties are set to default values', function() {
-        expect(component.iconStyleClass).to.equal('');
-        expect(component.showIcon).to.be.false;
-        expect(component.openable).to.be.false;
-        expect(component.open).to.be.false;
-        expect(component.ripple).to.be.false;
+        expect(element.iconStyleClass).to.equal('');
+        expect(element.showIcon).to.be.false;
+        expect(element.openable).to.be.false;
+        expect(element.open).to.be.false;
+        expect(element.ripple).to.be.false;
       });
 
       test('does show custom paper-icon-button if not showIcon and not openable and not open', function(done) {
         flush(function() {
-          expect(component.$$('paper-icon-button.show')).to.exist;
-          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
+          expect(element.$$('paper-icon-button.show')).to.exist;
+          expect(element.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
           done();
         });
       });
 
       test('does show custom paper-icon-button if open but not showIcon and not openable', function(done) {
-        component.open = true;
+        element.open = true;
         flush(function() {
-          expect(component.$$('paper-icon-button.show')).to.exist;
-          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
+          expect(element.$$('paper-icon-button.show')).to.exist;
+          expect(element.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
           done();
         });
       });
 
       test('does show custom paper-icon-button if showIcon but not openable or open', function(done) {
-        component.showIcon = true;
+        element.showIcon = true;
         flush(function() {
-          expect(component.$$('paper-icon-button.show')).to.exist;
-          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
+          expect(element.$$('paper-icon-button.show')).to.exist;
+          expect(element.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
           done();
         });
       });
 
       test('does show custom paper-icon-button if showIcon and openable but not open', function(done) {
-        component.showIcon = true;
-        component.openable = true;
+        element.showIcon = true;
+        element.openable = true;
         flush(function() {
-          expect(component.$$('paper-icon-button.show')).to.exist;
-          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
+          expect(element.$$('paper-icon-button.show')).to.exist;
+          expect(element.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
           done();
         });
       });
 
       test('does show custom paper-icon-button if showIcon and open but not openable', function(done) {
-        component.showIcon = true;
-        component.open = true;
+        element.showIcon = true;
+        element.open = true;
         flush(function() {
-          expect(component.$$('paper-icon-button.show')).to.exist;
-          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
+          expect(element.$$('paper-icon-button.show')).to.exist;
+          expect(element.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
           done();
         });
       });
 
       test('does show cusom paper-icon-button if showIcon and openable and open', function(done) {
-        component.showIcon = true;
-        component.openable = true;
-        component.open = true;
+        element.showIcon = true;
+        element.openable = true;
+        element.open = true;
         flush(function() {
-          expect(component.$$('paper-icon-button.show')).to.exist;
-          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
+          expect(element.$$('paper-icon-button.show')).to.exist;
+          expect(element.$$('paper-icon-button.show').icon).to.equal('icons:polymer');
           done();
         });
       });
 
       test('does show expand-more paper-icon-button if openable but not open or showIcon', function(done) {
-        component.openable = true;
+        element.openable = true;
         flush(function() {
-          expect(component.$$('paper-icon-button.show')).to.exist;
-          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:expand-more');
+          expect(element.$$('paper-icon-button.show')).to.exist;
+          expect(element.$$('paper-icon-button.show').icon).to.equal('icons:expand-more');
           done();
         });
       });
 
       test('does show expand-less paper-icon-button if openable and open but not showIcon', function(done) {
-        component.openable = true;
-        component.open = true;
+        element.openable = true;
+        element.open = true;
         flush(function() {
-          expect(component.$$('paper-icon-button.show')).to.exist;
-          expect(component.$$('paper-icon-button.show').icon).to.equal('icons:expand-less');
+          expect(element.$$('paper-icon-button.show')).to.exist;
+          expect(element.$$('paper-icon-button.show').icon).to.equal('icons:expand-less');
           done();
         });
       });
 
       test('ripple does set noink', function(done) {
-        expect(component.$$('paper-icon-button')).to.exist;
-        expect(component.$$('paper-icon-button').noink).to.be.true;
-        component.ripple = true;
+        expect(element.$$('paper-icon-button')).to.exist;
+        expect(element.$$('paper-icon-button').noink).to.be.true;
+        element.ripple = true;
         flush(function() {
-          expect(component.$$('paper-icon-button')).to.exist;
-          expect(component.$$('paper-icon-button').noink).to.be.false;
+          expect(element.$$('paper-icon-button')).to.exist;
+          expect(element.$$('paper-icon-button').noink).to.be.false;
           done();
         });
       });
