Updated to Polymer 2

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,98 +18,100 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
   <link rel="import" href="../modal-icon.html">
 </head>
 
 <body unresolved>
-  <template is="dom-bind" id="demo">
-    <p>===== DEMO 1 =====</p>
-    <p>Icon: icons:polymer</p>
-    <p>Icon Style Class: custom</p>
-    <p>Show Icon: false</p>
-    <p>Openable: false</p>
-    <p>Open: false</p>
+  <dom-bind id="demo">
+    <template is="dom-bind">
+      <p>===== DEMO 1 =====</p>
+      <p>Icon: icons:polymer</p>
+      <p>Icon Style Class: custom</p>
+      <p>Show Icon: false</p>
+      <p>Openable: false</p>
+      <p>Open: false</p>
 
-    <p>Modal Icon:</p>
-    <modal-icon
-      icon="icons:polymer"
-      icon-style-class="custom">
-    </modal-icon>
+      <p>Modal Icon:</p>
+      <modal-icon
+        icon="icons:polymer"
+        icon-style-class="custom">
+      </modal-icon>
 
-    <p>===== DEMO 2 =====</p>
-    <p>Icon: icons:polymer</p>
-    <p>Icon Style Class: custom</p>
-    <p>Show Icon: true</p>
-    <p>Openable: false</p>
-    <p>Open: false</p>
+      <p>===== DEMO 2 =====</p>
+      <p>Icon: icons:polymer</p>
+      <p>Icon Style Class: custom</p>
+      <p>Show Icon: true</p>
+      <p>Openable: false</p>
+      <p>Open: false</p>
 
-    <p>Modal Icon:</p>
-    <modal-icon
-      icon="icons:polymer"
-      icon-style-class="custom"
-      show-icon>
-    </modal-icon>
+      <p>Modal Icon:</p>
+      <modal-icon
+        icon="icons:polymer"
+        icon-style-class="custom"
+        show-icon>
+      </modal-icon>
 
-    <p>===== DEMO 3 =====</p>
-    <p>Icon: icons:polymer</p>
-    <p>Icon Style Class: custom</p>
-    <p>Show Icon: false</p>
-    <p>Openable: true</p>
-    <p>Open: false</p>
+      <p>===== DEMO 3 =====</p>
+      <p>Icon: icons:polymer</p>
+      <p>Icon Style Class: custom</p>
+      <p>Show Icon: false</p>
+      <p>Openable: true</p>
+      <p>Open: false</p>
 
-    <p>Modal Icon:</p>
-    <modal-icon
-      icon="icons:polymer"
-      icon-style-class="custom"
-      openable>
-    </modal-icon>
+      <p>Modal Icon:</p>
+      <modal-icon
+        icon="icons:polymer"
+        icon-style-class="custom"
+        openable>
+      </modal-icon>
 
-    <p>===== DEMO 4 =====</p>
-    <p>Icon: icons:polymer</p>
-    <p>Icon Style Class: custom</p>
-    <p>Show Icon: true</p>
-    <p>Openable: true</p>
-    <p>Open: false</p>
+      <p>===== DEMO 4 =====</p>
+      <p>Icon: icons:polymer</p>
+      <p>Icon Style Class: custom</p>
+      <p>Show Icon: true</p>
+      <p>Openable: true</p>
+      <p>Open: false</p>
 
-    <p>Modal Icon:</p>
-    <modal-icon
-      icon="icons:polymer"
-      icon-style-class="custom"
-      show-icon
-      openable>
-    </modal-icon>
+      <p>Modal Icon:</p>
+      <modal-icon
+        icon="icons:polymer"
+        icon-style-class="custom"
+        show-icon
+        openable>
+      </modal-icon>
 
-    <p>===== DEMO 5 =====</p>
-    <p>Icon: icons:polymer</p>
-    <p>Icon Style Class: custom</p>
-    <p>Show Icon: false</p>
-    <p>Openable: true</p>
-    <p>Open: true</p>
+      <p>===== DEMO 5 =====</p>
+      <p>Icon: icons:polymer</p>
+      <p>Icon Style Class: custom</p>
+      <p>Show Icon: false</p>
+      <p>Openable: true</p>
+      <p>Open: true</p>
 
-    <p>Modal Icon:</p>
-    <modal-icon
-      icon="icons:polymer"
-      icon-style-class="custom"
-      openable
-      open>
-    </modal-icon>
+      <p>Modal Icon:</p>
+      <modal-icon
+        icon="icons:polymer"
+        icon-style-class="custom"
+        openable
+        open>
+      </modal-icon>
 
-    <p>===== DEMO 6 =====</p>
-    <p>Icon: icons:polymer</p>
-    <p>Icon Style Class: custom</p>
-    <p>Show Icon: true</p>
-    <p>Openable: true</p>
-    <p>Open: true</p>
+      <p>===== DEMO 6 =====</p>
+      <p>Icon: icons:polymer</p>
+      <p>Icon Style Class: custom</p>
+      <p>Show Icon: true</p>
+      <p>Openable: true</p>
+      <p>Open: true</p>
 
-    <p>Modal Icon:</p>
-    <modal-icon
-      icon="icons:polymer"
-      icon-style-class="custom"
-      show-icon
-      openable
-      open>
-    </modal-icon>
-  </template>
+      <p>Modal Icon:</p>
+      <modal-icon
+        icon="icons:polymer"
+        icon-style-class="custom"
+        show-icon
+        openable
+        open>
+      </modal-icon>
+    </template>
+  </dom-bind>
 </body>
 </html>
